Add CA cert generation and download UI
Introduce a local two-level PKI and UI for installing the companion app CA. Adds BouncyCastle dependencies and a new SslCertificateManager that creates a CA (ca.jks / ca.crt / ca.pem) and ECDSA P-256 server cert (server.jks), serves GET /ca.crt and GET /ca.pem, and exposes a SHA-256 fingerprint accessor. Server logic now returns the CA fingerprint and allows unauthenticated downloads of the CA certificate so mobile devices can trust the server. UI updates add strings, a certificate download button, fingerprint display, and a QR dialog with install instructions to guide iOS/Android flows. Also updates build libs (libs.versions.toml and build.gradle.kts) to include BouncyCastle.